<resources>
    <string name="app_name">MoviesApp</string>
    <string name="email_text">Email</string>
    <string name="password_text">Password</string>
    <string name="log_in_text">Log in</string>
    <string name="name_text">Name</string>
    <string name="phone_number_text">Phone number</string>
    <string name="register_text">Register</string>
    <string name="go_to_register_text">Go to register</string>
    <string name="go_to_login_text">Go to login</string>
    <string name="required_error_text">Required</string>
    <string name="unique_error_text">Must be unique</string>
    <string name="wrong_credentials_error_text">Wrong credentials. Please try again.</string>
    <string name="log_out_text">Log out</string>
    <string name="home_menu_item">Home</string>
    <string name="profile_menu_item">Profile</string>
    <string name="search_menu_item">Search</string>
    <string name="settings_menu_item">Settings</string>
    <string name="home_text">Home</string>
    <string name="film_poster_accessibility_desc">film poster</string>
    <string name="favorite_section_hint">Mark your favorite films and they will appear here</string>
    <string name="empty_list_hint">There are no films yet</string>
    <string name="title_text">Title</string>
    <string name="year_text">Year</string>
    <string name="description_text">Description</string>
    <string name="image_url_text">Image URL</string>
    <string name="add_text">Add</string>
    <string name="invalid_url_error_text">URL is invalid</string>
    <string name="film_rated_msg">You rated this film as %1$d/5</string>
    <string name="delete_account_text">Delete account</string>
    <string name="phone_text">Phone</string>
    <string name="change_password_text">Change password</string>
    <string name="current_password_text">Current password</string>
    <string name="new_password_text">New password</string>
    <string name="phone_changed_text">Phone successfully changed</string>
    <string name="invalid_phone_text">Invalid phone number</string>
    <string name="wrong_password_text">Password is wrong</string>
    <string name="password_changed_text">Password successfully changed</string>
    <string name="account_being_deleted_title">Your account is being deleted now</string>
    <string name="account_being_deleted_info">You requested deletion of your account. It will be fully deleted in %1$d day(s). In this period of time you can recover your account, or you can fully delete it right now.</string>
    <string name="recover_account_text">Recover account</string>
    <string name="delete_account_right_now_text">Delete account right now</string>
    <string name="invalid_phone_number_text">Invalid phone number</string>
    <string name="invalid_email_address_text">Invalid email address</string>
    <string name="add_film_text">Add film</string>
</resources>
