<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:collapsedTitleGravity="center|left"
            app:contentScrim="?attr/colorSurfaceContainerHigh"
            app:expandedTitleGravity="top|center"
            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
            app:title="@string/home_text"
            app:titleCollapseMode="scale">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_empty_fav_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="58dp"
                android:padding="16dp"
                android:visibility="gone"
                app:layout_collapseMode="parallax"
                app:layout_collapseParallaxMultiplier="1.2">

                <ImageView
                    android:id="@+id/iv_fav_icon"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:src="@drawable/baseline_favorite_border_24"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="?attr/colorOnSurfaceVariant" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/favorite_section_hint"
                    app:layout_constraintTop_toBottomOf="@id/iv_fav_icon" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_favorites"
                android:layout_width="match_parent"
                android:layout_height="275dp"
                android:layout_marginTop="58dp"
                android:orientation="horizontal"
                android:padding="16dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_collapseMode="parallax"
                app:layout_collapseParallaxMultiplier="1.2"
                tools:listitem="@layout/item_film_card" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                style="@style/AppToolbarStyle"
                app:menu="@menu/home_app_bar_menu" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_empty_films_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone">

        <ImageView
            android:id="@+id/iv_films_icon"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:src="@drawable/baseline_local_movies_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="?attr/colorOnSurfaceVariant" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/empty_list_hint"
            app:layout_constraintTop_toBottomOf="@id/iv_films_icon" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_feed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:listitem="@layout/item_film_card"
        tools:padding="16dp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/baseline_add_24"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>
